# media-server

./: Cargo.toml  Dockerfile  README.md  buckets.toml
.github/workflows/: docker.yml
quadlet/: media-server.container
src/: auth.rs  bucket.rs  buckets.rs  cleanup.rs  config.rs  error.rs  image_processing.rs  main.rs
src/routes/: delete.rs  mod.rs  serve.rs  upload.rs
