[package]
name = "media-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["multipart", "tokio"] }
tokio = { version = "1.52.3", features = ["net", "signal", "rt-multi-thread", "fs", "io-util", "time", "macros"] }
tower-http = { version = "0.6.11", features = ["trace"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
uuid = { version = "1", features = ["v7"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"