[package]
name = "media-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["multipart", "tokio"] }
tokio = { version = "1.52.3", features = ["net", "signal", "rt-multi-thread", "fs", "io-util", "time", "macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6.11", features = ["trace", "fs"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
uuid = { version = "1", features = ["v7"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mimalloc = "0.1"
toml = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
future-incompatible = "warn"
nonstandard_style = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }